# context-fabrica

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml  requirements-dev.txt  setup.py
.claude/commands/: memory-status.md  recall.md  remember.md  synthesize.md
.github/workflows/: publish-pypi.yml
docs/: architecture.md  backend-decision-matrix.md  getting-started.md  v2-architecture.md
examples/: basic_memory.py
scripts/: project_memory.py  verify_local_postgres.sh
sql/: postgres_bootstrap.sql  postgres_smoke_test.sql
src/context_fabrica/: __init__.py  adapters.py  bootstrap_cli.py  cli.py  config.py  doctor_cli.py  embedding.py  engine.py  entity.py  graph.py  index.py  mcp_server.py  models.py  projection.py  projector_cli.py  reranking.py  synthesis.py  temporal.py
src/context_fabrica/storage/: __init__.py  hybrid.py  kuzu.py  postgres.py  projector.py  sqlite.py
tests/: conftest.py  test_embedding.py  test_engine.py  test_hybrid_storage.py  test_policy.py  test_postgres_live.py  test_project_memory_script.py  test_projector.py  test_sqlite_storage.py
