[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-fabrica"
version = "0.1.0"
description = "Hybrid graph + semantic memory engine for domain-specific work agents"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "context-fabrica contributors" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
postgres = ["psycopg[binary]>=3.2", "pgvector>=0.3"]
kuzu = ["kuzu>=0.8"]
v2 = ["psycopg[binary]>=3.2", "pgvector>=0.3", "kuzu>=0.8"]

[project.scripts]
context-fabrica = "context_fabrica.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
